# shipshape

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md
.claude/skills/a11y-audit/: SKILL.md
.claude/skills/a11y-audit/references/: wcag-checklist.md
.claude/skills/api-design/: SKILL.md
.claude/skills/code-smells/: SKILL.md
.claude/skills/design-system/: SKILL.md
.claude/skills/design-system/references/: component-spec.md
.claude/skills/e2e-testing/: SKILL.md
.claude/skills/mcp-design/: SKILL.md
.claude/skills/mobile-first-ui/: SKILL.md
.claude/skills/mobile-first-ui/references/: responsive-patterns.md
.claude/skills/new-app-setup/: SKILL.md
.claude/skills/parallel-agents/: SKILL.md
.claude/skills/plan-feature/: SKILL.md
.claude/skills/pr-review/: SKILL.md
.claude/skills/python-quality/: SKILL.md
.claude/skills/spec-driven/: SKILL.md
.claude/skills/typescript-quality/: SKILL.md
.claude/skills/web-design-review/: SKILL.md
docs/: workflow.md
docs/plans/: README.md
templates/api-python/: README.md  pyproject.toml
templates/ci/: ci.yml
templates/e2e/: playwright.config.ts
templates/web-nextjs/: eslint.config.mjs
