# Managed with uv (https://docs.astral.sh/uv/): uv sync / uv add / uv run — never pip.
[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
]

# uv installs this group by default with `uv sync`
[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W pycodestyle (PEP 8), F pyflakes, I isort, B bugbear, C4 comprehensions,
# UP pyupgrade, SIM simplify, RUF ruff-specific
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF"]

[tool.mypy]
strict = true
warn_unreachable = true
warn_redundant_casts = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing -q"
asyncio_mode = "auto"
testpaths = ["tests"]
